--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -8,7 +8,9 @@
     &__logo-box {
         text-align: center;
         margin-bottom: 8rem;
-
+        border-bottom: 1px solid $color-grey-dark;
+        display: inline-block;
+        transform: translateX(67rem);
     }
 
     &__logo {
