--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -39,6 +39,7 @@
         z-index: 1500;
 
         opacity: 0;
+        visibility: hidden;
         width: 0;
         transition: all .8s cubic-bezier(0.68, -0.55, 0.265, 1.55);
     }
@@ -96,6 +97,8 @@
     &__checkbox:checked ~ &__nav {
         opacity: 1;
         width: 100%;
+        visibility: visible;
+        // z-index: 1500;
     }
 
 
